--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.0",
     "nanoid": "^5.0.1",
     "normalize": "^0.3.1",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.4.5",
